--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -1,16 +1,35 @@
 .wrapper {
   margin: 15px;
-  padding: 20px;
+  padding: 15px;
   display: flex;
   margin-top: 20px;
   border: 1px solid rgb(164, 155, 155);
   width: fit-content;
 }
 
+.button {
+  margin-top: 20px;
+  margin-left: 20px;
+  padding: 5px 10px 5px 8px;
+  display: flex;
+  align-items: center;
+  border: none;
+  border-radius: 5px;
+  background-color: rgb(223, 223, 223);
+  color: inherit;
+  font-size: 18px;
+  cursor: pointer;
+}
+.icon {
+  margin-right: 5px;
+  width: 20px;
+  height: 20px;
+}
+
 .title {
   margin: 0;
   margin-top: 5px;
-  padding: 5px;
+  margin-bottom: 10px;
 }
 h3,
 p {
@@ -19,14 +38,16 @@ p {
 }
 .img {
   display: block;
-  background-color: rgb(207, 203, 203);
+  background-color: rgb(223, 223, 223);
+  width: 300px;
 }
+
 .info {
   display: block;
   margin-left: 28px;
 }
 .topic {
-  padding: 8px;
+  margin-top: 20px;
 }
 
 .list {
@@ -37,4 +58,35 @@ p {
   gap: 15px;
   list-style: none;
   color: rgb(56, 54, 54);
+}
+.wrapperLink {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.buttonLink {
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  min-width: 80px;
+  margin-bottom: 15px;
+  border: none;
+  border-radius: 5px;
+  background-color: rgb(223, 223, 223);
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.buttonLink:hover,
+button:hover {
+  background-color: rgb(198, 198, 214);
+  cursor: pointer;
+}
+
+.link {
+  display: block;
+  text-decoration: none;
+  color: black;
+  padding: 8px;
 }
