--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -71,28 +71,16 @@ p {
   gap: 20px;
 }
 
-.buttonLink {
-  text-align: center;
-  margin: 0;
-  padding: 0;
-  min-width: 80px;
-  margin-bottom: 15px;
-  border: none;
-  border-radius: 5px;
-  background-color: rgb(223, 223, 223);
-  font-size: 18px;
-  cursor: pointer;
-}
-
-.buttonLink:hover,
-button:hover {
-  background-color: rgb(198, 198, 214);
-  cursor: pointer;
-}
-
 .link {
   display: block;
   text-decoration: none;
   color: black;
   padding: 8px;
+  border-radius: 5px;
+  background-color: rgb(223, 223, 223);
+}
+
+.button:hover,
+.link:hover {
+  background-color: rgb(198, 198, 214);
 }
